[package]
name = "perftest"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"


[dependencies]
clap = { version = "4.5.4", features = ["color", "derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
anyhow = "1.0.98"
thiserror = "2.0.12"
bytes ="1.10.1"
tokio = { version = "1", features = [ "rt",
  "rt-multi-thread",
  "net",
  "time",
  "sync",
  "macros",
  "fs",
  "io-util",] }
  
log={version="0.4.27"}
rand = "0.8"
libc = "0.2"
tokio-test = "0.4"
